--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="Welcome to Astro.">
+	<a href="/about">Astro</a>
 	<main>
 		<svg
 			class="astro-a"
