--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,10 @@
 ---
+import { ViewTransitions, fade } from "astro:transitions";
+import "../styles/main.css";
+
+// import { Icon }
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,44 +12,56 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+    <ViewTransitions />
+  </head>
+  <body
+    class="bg-theme-base text-theme-900"
+    transition:animate={fade({ duration: "0.4s" })}
+  >
+    <nav class="flex items-center justify-center gap-4 p-2" transition:persist>
+      <a
+        class="w-8 h-8 grid place-items-center rounded hover:bg-theme-200"
+        aria-label="Go Home"
+        href="/"
+      >
+        <!-- <Icon name="bx:bxs-home" class="w-4 h-4 text-theme-800" /> -->
+      </a>
+      <button
+        class="w-8 h-8 grid place-items-center rounded hover:bg-theme-200"
+        data-theme-toggle
+        aria-label="toggle theme"
+      >
+        <!-- <Icon name="bx:bxs-sun" class="w-4 h-4 text-theme-800" /> -->
+      </button>
+    </nav>
+    <div transition:animate="slide">
+      <slot />
+    </div>
+    <script>
+      const themeToggles = document.querySelectorAll("[data-theme-toggle]");
+
+      const getTheme = () => localStorage.getItem("theme") || "light";
+
+      const setTheme = (theme) =>
+        document.documentElement.setAttribute("data-theme", theme);
+
+      window.addEventListener("DOMContentLoaded", () => setTheme(getTheme()));
+      document.addEventListener("astro:after-swap", () => setTheme(getTheme()));
+
+      themeToggles.forEach((toggle) => {
+        toggle.addEventListener("click", () => {
+          const nextTheme = getTheme() === "light" ? "dark" : "light";
+          localStorage.setItem("theme", nextTheme);
+          setTheme(nextTheme);
+        });
+      });
+    </script>
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
