--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,11 @@ import { Image } from "astro:assets";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main class="grid gap-12 pb-12 px-6">
-    <div
-      class="flex items-center gap-6 justify-centers mx-auto flex-wrap-reverse"
-    >
-      <div class="grid gap-4">
-        <h1 class="text-4xl sm:text-6xl font-bold">View Transitions</h1>
-        <p class="text-xl max-w-[40ch]">
+  <main>
+    <div>
+      <div>
+        <h1>View Transitions</h1>
+        <p>
           The View Transitions API in JavaScript provides a seamless way to
           create smooth transitions between views or components in web
           applications.
@@ -23,7 +21,7 @@ import { Image } from "astro:assets";
         src={astroIcon}
         alt="Astro image"
         format="avif"
-        width={50}
+        width={500}
         transition:name="img"
       />
 	</a>
