--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,13 +4,17 @@ import { Image } from "astro:assets";
 import astroIcon from "../assets/astro-icon.png";
 ---
 
-<Layout title="About">
+<Layout title="About" >
     <h1>Magic</h1>
-    <Image
-    src={astroIcon}
-    alt="Astro image"
-    format="avif"
-    width={500}
-    transition:name="img"
-  />
+    <div style={"display: flex; width: 100%"}>
+        <Image
+        style={"margin: 0 auto"}
+        src={astroIcon}
+        alt="Astro image"
+        format="avif"
+        width={300}
+        transition:name="img"
+      />
+    </div>
+   
 </Layout>
