--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -89,8 +89,8 @@
   }
 }
 
-.grid {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+nav {
+   a{
+    font-size: 20px;
+   }
 }
